# ocaml-elo

./: .ocamlformat  Makefile  chessdb.ml  db.ml  dune  dune-project  e.ml  game.ml  index.html  main.ml  ocaml-elo.opam  player.ml  r.ml  rating.ml  result.ml
